here is a little modification

--- a/style.css
+++ b/style.css
@@ -8,3 +8,8 @@
     width: 100px;
     box-shadow: 4px 4px 10px rgb(0, 0, 240);
 }
+.hellow{
+    height: 100px;
+    width: 100px;
+    background-color: green;
+}
