--- a/style.css
+++ b/style.css
@@ -12,4 +12,13 @@
     height: 100px;
     width: 100px;
     background-color: green;
+    margin-left: 100px;
+    position: relative;
+}
+.helloi{
+  height: 100px;
+    width: 100px;
+  background-color: red;
+  margin-top: -60px;
+  margin-left: 30px;
 }
