i solved that but div is still unclear to me

--- a/code learning webside/newscc.css
+++ b/code learning webside/newscc.css
@@ -5,13 +5,15 @@ body{
     background-color: aqua;
 }
 #float{
-    border:solid;
+    border: solid;
     border-radius:2px;
+    width: 100%;
+   
     float: left;
-    float: top;
     display: flex;
 }
 #imagef{
-    height: 200px;
-    width: 200px;
+    height: 100px;
+    width: 100;
+   
 }
